*etcd-2.1.1 (15 Aug 2015)

  15 Aug 2015; Stefan Junker <mail@stefanjunker.de> +etcd-2.1.1.ebuild:
  dev-db/etcd: version bump to 2.1.1

  25 May 2015; Stefan Junker <code@stefanjunker.de> etcd-2.0.11.ebuild:
  dev-db/etcd-2.0.11: use git tag and keyword for ~amd64 and ~x86

  25 May 2015; Stefan Junker <code@stefanjunker.de> etcd-2.0.11.ebuild:
  dev-db/etcd-2.0.11: remove keywords due to broken upstream

*etcd-2.0.11 (25 May 2015)

  25 May 2015; Stefan Junker <code@stefanjunker.de> +etcd-2.0.11.ebuild:
  dev-db/etcd: version bump

*etcd-2.0.10-r1 (02 May 2015)

  02 May 2015; Stefan Junker <code@stefanjunker.de> +etcd-2.0.10-r1.ebuild:
  dev-db/etcd revision bump to override official portage