@@ -2,11 +2,7 @@ AUX etcd.2.initd 1305 SHA256 1b520f25660519dc5cc48f679b4c112caf106e45d045a79b17d
 AUX etcd.2.service 240 SHA256 6f9e656f6f71b00a716cba49e38b1c6a982ad48ed614e4c52a641b8601f287bc SHA512 2261e20abcd043b2c445f6069953be33a89d93e691f25a36f3a95486758797d20d58dd93afa50a8c135a73ce9a1e42989ba438dae55aa3119beb50b3c1b96294 WHIRLPOOL 8dcea2716a0282a13e36fae61dc58d672cdeab63eb6ebfd7fa9285d7f11fd7320640c289704b7a959ea3c25ea80a206dd73d0fa4a75dd441339e5a952dce2637
 AUX etcd.env 186 SHA256 7153f37ed792670b85ef94434df392c4085fb8838cbf6a6a4193ca4b56db246d SHA512 ac1657e38b815f8c5ef1a425754fb7c91ed51a01ae602b3b6fe3a801b160b72d8a5cf7be370eecf59c08f7902cdb16be82714e0ccfa09a071e825eb90b9e1072 WHIRLPOOL d7486912f80f986162767d135a99adfb69402bf0417daad1143b0f5b05fafb2d8cc7f1b6cd89d58ebe2f47ac5454a586c1c964a7afab1cf9445a506049c4a090
 AUX etcd.tmpdfsd.conf 72 SHA256 0cce627f141c637fc1fe4dcfa8dd58f4f08b176372a96c1ba2b2a82816a04554 SHA512 5af9fe310d39ede799f9cf4cac394303cf48b9a0bc08709d7015fd03c6f086d81e08e8cf6c5315850c48321c3da5153a333653738a119fb2d6c61171ee5076e0 WHIRLPOOL 4b7a4e4a423e580313e0703e5c085983ff5f36fa8fc90ace768e71456bf8cc72df39d381dfcc30fa6c8ee3a5d14e3d8889cbc3128073293a9129a67ea24c5d22
-DIST etcd-2.0.10.tar.gz 450581 SHA256 6029113d9870e5c6f0d10adbd2b6670958a46575114a094b86b607771a0e5ff3 SHA512 825524ee4c435b8f369970cfe39158443b8e29f6fba5ab86ae8be2d91f6faa0674d15f311bc863092fb6c77b054b8f3b69e163610b546e3c5cf59a111b38a3ed WHIRLPOOL a2b4c160cbc9cde5ebf64fa2fe41f6bc6ac5dc851551778b681d658e511f0dbc7241a4c74a6b520d43fe8e9cee65fa28f94655d64caf6f3c99cbd4ba84a57b65
-DIST etcd-2.0.9.tar.gz 450074 SHA256 a03c44fa125a3058c4cec0704136485b6031163108399969ba4a0e19f98dcf23 SHA512 f6e82e850e051223a62dc24a0f639b13c7f8f29708bbf71f976ca7b57a083b2fc5c659a071cc36292e436e8833638ecaaf2ad6edc2b8536b62dd188f87e048e3 WHIRLPOOL 07347a68d190909a6b16f5490ff30c72b7f657c4abe3521fb0ea1a7bbe938dbc292189046880afa6a499fa2f8fd8b4ba731d9f2ef0530a9b5183c81af93a622f
-EBUILD etcd-2.0.10-r1.ebuild 1970 SHA256 3d438361a0a60da34ce072bdffbfdf6b556b74d377242a9e44dc35b51e8642ab SHA512 288af4718cbda8f43d1ee17aacf9642a6a922fe613913ed14bc945cca6fe483a68d16407b6451979c024a06b46f39128bd53e2a9cb7df75ee17ea828e6616ef3 WHIRLPOOL 70921da4b208f0d816ee6857c852a572d47edbbac9e87245aaec81df93abdcae26fa0454c02edae0c22baae937223fe8ebb15cccec5137e656129327b89a0427
 EBUILD etcd-2.0.11.ebuild 1970 SHA256 a4621a868a0e2226e275908758df404a642cb5776ae980e6e46d5a90d59b9ef4 SHA512 4b8dbb49671b071cf236966ecb70ca16c45d70e7bd93802db7b1d58513eb5051351decf6b00edd9414de541b8c75af3f234b6f2a79152ce366e431dbb95a924b WHIRLPOOL a2272be25fde8660d6d6fdaf1ad283f6cd53adc1076ab20a55c2eceef7e574090f785179fd1dea55aafaffaed3d280d91ac018fc26a70945de2828937e08da6a
-EBUILD etcd-2.0.9.ebuild 1970 SHA256 3d438361a0a60da34ce072bdffbfdf6b556b74d377242a9e44dc35b51e8642ab SHA512 288af4718cbda8f43d1ee17aacf9642a6a922fe613913ed14bc945cca6fe483a68d16407b6451979c024a06b46f39128bd53e2a9cb7df75ee17ea828e6616ef3 WHIRLPOOL 70921da4b208f0d816ee6857c852a572d47edbbac9e87245aaec81df93abdcae26fa0454c02edae0c22baae937223fe8ebb15cccec5137e656129327b89a0427
 EBUILD etcd-2.1.1.ebuild 1970 SHA256 a4621a868a0e2226e275908758df404a642cb5776ae980e6e46d5a90d59b9ef4 SHA512 4b8dbb49671b071cf236966ecb70ca16c45d70e7bd93802db7b1d58513eb5051351decf6b00edd9414de541b8c75af3f234b6f2a79152ce366e431dbb95a924b WHIRLPOOL a2272be25fde8660d6d6fdaf1ad283f6cd53adc1076ab20a55c2eceef7e574090f785179fd1dea55aafaffaed3d280d91ac018fc26a70945de2828937e08da6a
-MISC ChangeLog 704 SHA256 e45e9a94bf8471a271b1a0e50a18731e746ae5f0e664965ac889b21c86f77e0e SHA512 98e3c5b767695bddb1eedf5bc43e296271a4fcd4f6a869c9484ac9b578fe820937f51109cab026c9b020ea6925ff2b27324b1d3cbd592dfe96530874d7dcae49 WHIRLPOOL e378f641fdd33c636123132301701e40c8e74a13f0a58b132afa4cd53c8a84c7f30bc297237dd9601ab8780b4b246cc287450675bf53bf1fb548414f893591e6
+MISC ChangeLog 838 SHA256 7dfdd233217e66e8846863bba7aae31a44dc93f6ada75791b78a5d4d1d6b1934 SHA512 d95347d0580164f89147b4ae46fcbd2f0aeca2f62c37297b9ba3c2177a82efccb89be9d2d95aebdbe95db5b2f6deb7b78790798f0542d09faa8757fb98afe3c1 WHIRLPOOL 46ceac62bebf7cc1dfccb8e8386e2c5869f3b35cf8ad11854aa440510840c00e1ff779a850cfde22da6ecf548ec0e6d8b2eee167920b0bcb12e95a9f442ddc48
 MISC metadata.xml 668 SHA256 9bf04bf0400d8cb0f6a15d62ff6e78400c99f5a18d72942d3468bbd014a28e92 SHA512 59dd6e7cc0c2fcec16bb901be1940896c7c4488bc47f5a72efc507e3185935d4d0a4dade529fd2f0881bcc9f84b74da29b300401d1a0c269392ecd9ea3665bd9 WHIRLPOOL ad119c6d02ee21374390373fa34dde5e1f144bfa0c9dfd98e948b28fd1631f00043727d51ce017026f38d8c36a10576ae3cf6a82b4244ee26da8374618bf981a
